--- a/test4.html
+++ b/test4.html
@@ -46,7 +46,7 @@
        draggable: true,
        raiseOnDrag: true,
        map: map,
-       labelContent: "$395K",
+       labelContent: "<img src='image/icon/markers/pin_kiwi.png' style='height: 30px; width: 30px;' />",
        labelAnchor: new google.maps.Point(22, 0),
        labelClass: "labels", // the CSS class for the label
        labelStyle: {opacity: 1.0}
